# CTwitchBot

./: CMakeLists.txt  README.md  main.c  nr_func.c  nr_func.h  nr_socket.h  platform.c  platform.h  twitch.c  twitch.h  values.h
